added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my firest ever github repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex unde, aspernatur accusantium, possimus consectetur harum delectus maiores repellendus, eveniet perspiciatis inventore distinctio amet cum eligendi libero consequuntur voluptatem sequi expedita.
+
+        </p>
+    </div>
 </body>
 </html>
