--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <div>
-        <h3>My First Website</h3>
+        <h3>My First Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex unde, aspernatur accusantium, possimus consectetur harum delectus maiores repellendus, eveniet perspiciatis inventore distinctio amet cum eligendi libero consequuntur voluptatem sequi expedita.
+
+        </p>
+    </div>
+    <div>
+        <h3>My Second BLog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex unde, aspernatur accusantium, possimus consectetur harum delectus maiores repellendus, eveniet perspiciatis inventore distinctio amet cum eligendi libero consequuntur voluptatem sequi expedita.
+
+        </p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex unde, aspernatur accusantium, possimus consectetur harum delectus maiores repellendus, eveniet perspiciatis inventore distinctio amet cum eligendi libero consequuntur voluptatem sequi expedita.
 
         </p>
